# puzzles

./: .gitignore  README.md
advent of code/2021/: Cargo.toml
advent of code/2021/src/: main.rs
advent of code/2021/src/day1/: mod.rs
advent of code/2021/src/day10/: mod.rs
advent of code/2021/src/day11/: mod.rs
advent of code/2021/src/day12/: mod.rs
advent of code/2021/src/day13/: mod.rs
advent of code/2021/src/day14/: mod.rs
advent of code/2021/src/day15/: mod.rs
advent of code/2021/src/day16/: mod.rs
advent of code/2021/src/day17/: mod.rs
advent of code/2021/src/day18/: mod.rs
advent of code/2021/src/day2/: mod.rs
advent of code/2021/src/day3/: mod.rs
advent of code/2021/src/day4/: mod.rs
advent of code/2021/src/day5/: mod.rs
advent of code/2021/src/day6/: mod.rs
advent of code/2021/src/day7/: mod.rs  (+1 more)
advent of code/2022/: .gitignore  day12.ts  day14.ts  day15.ts  day16.ts  day17.ts  day18.ts  day2.ts  day5.ts  index.ts  test.ts  utils.ts
advent of code/2022/deno/: day1.ts  day10.ts  day11.ts  day12.ts  day13.ts  day14.ts  day3.ts  day4.ts  day5.ts  day6.ts  day7.ts  day8.ts  day9.ts  deno.jsonc  index.ts  test.ts  utils.ts
advent of code/2022/ocaml/: .ocamlformat  dune-project
advent of code/2023/: aoc2023.opam  dune-project
advent of code/2023/lib/: day1.ml  day2.ml  day3.ml  day4.ml  day5.ml  day6.ml  utils.ml
advent of code/2024/: aoc_2024.opam  dune-project
advent of code/2024/src/: day1.ml  day2.ml  day3.ml  day4.ml  day5.ml  day6.ml  day7.ml  day8.ml  dune  import.ml  utils.ml
euler/ocaml/: README.md  solutions.ml
(+11 files in other folders)
