(lang dune 3.16)

(name aoc_2024)

(generate_opam_files true)

(source
 (github samouri/puzzels))

(authors "Jake Fried")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name aoc_2024)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
